tests/errors/no-instance/main.pa
def double = fun n {
  n + n
}

def main = double "hello"
